syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

import "services/shops.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;

service ShopService {
  rpc FindShopInfo(ShopIdsRequest) returns (ShopInfos) {}
  rpc FindStaffInfos(google.protobuf.Empty) returns (StaffInfos) {}
}

message ShopIdsRequest {
  repeated int32 ids = 1;
}
